# django-headless-cms

./: .env.test  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-init.txt  requirements-tests.txt  requirements.txt
.github/workflows/: publish.yml  test.yml
docs/: conf.py  configuration.rst  faq.rst  how-to-use.rst  index.rst  installation.rst  introduction.rst  quick-start.rst  requirements.txt
docs/reference/: admin.rst  auto_translate.rst  commands.rst  fields.rst  filters.rst  index.rst  mixins.rst  models.rst  schema.rst  serializers.rst
headless_cms/: __init__.py  admin.py  filters.py  forms.py  mixins.py  models.py  serializer_fields.py  serializers.py  settings.py  widgets.py
headless_cms/auto_translate/: __init__.py  base_translate.py  openai_translate.py
headless_cms/contrib/astrowind/: urls.py
headless_cms/contrib/astrowind/astrowind_metadata/: admin.py  models.py
headless_cms/contrib/astrowind/astrowind_metadata/migrations/: 0001_initial.py  0002_awmetadata_add_skip_translation.py  0002_awmetadata_title_template.py
headless_cms/contrib/astrowind/astrowind_pages/: admin.py  models.py  serializers.py  views.py
headless_cms/contrib/astrowind/astrowind_pages/migrations/: 0001_initial.py  0002_initial.py  0002_remove_awindexpage_contents.py  0003_awaboutpage_add_skip_translation.py  0003_awindexpage_title.py  0004_awsite.py  0005_awaboutfeature2through_awaboutfeature3through_and_more.py  0006_rename_feature2_awaboutpage_feature2s_and_more.py  0007_awpricingpage.py  0008_awpricingpage_step.py  0009_awcontactpage.py  0010_awindexpagecontentthrough_awindexpage_contents.py  0011_alter_awaboutfeature2through_about_page_and_more.py  0012_awpostpage.py  0013_awpostpage_blog_text.py  0014_awsite_announcement.py  0015_awsite_philosophy_awsite_philosophy_text.py  0016_awsite_default_metadata.py
headless_cms/contrib/astrowind/astrowind_pages/models/: __init__.py  pages.py
headless_cms/contrib/astrowind/astrowind_posts/: admin.py  models.py  serializers.py  urls.py  views.py
headless_cms/contrib/astrowind/astrowind_posts/migrations/: 0001_initial.py  0002_alter_awpost_options_and_more.py  0002_awcategory_skip_translation_awpost_add_skip_translation.py  0003_alter_awpostimage_src_url.py  0003_remove_awpost_category_remove_awpost_tags.py  0004_awposttag.py  0005_awcategory.py  0006_awpost_category_awpost_tags.py  0007_remove_awpost_image_awpostimage.py  0008_awpost_image.py  0009_awcategory_value_awposttag_title_and_more.py  0010_rename_value_awcategory_slug_and_more.py  0011_alter_awcategory_slug_alter_awposttag_slug.py  0012_remove_awpost_image_delete_awpostimage.py  0013_awpostimage_awpost_image.py  0014_awpost_slug.py  0015_alter_awcategory_slug_alter_awpost_slug_and_more.py  0016_remove_awpost_metadata_delete_awpostmetadata.py  0017_awpost_metadata.py  0018_alter_awpost_updated_date.py
headless_cms/contrib/astrowind/astrowind_widgets/: admin.py  models.py  serializers.py
headless_cms/contrib/astrowind/astrowind_widgets/migrations/: 0001_initial.py  0002_alter_awfeature_columns_alter_awfeature2_columns.py  0002_awaction_add_skip_translation.py  0003_alter_awcontent_options_awcontent_position.py  0003_alter_awimage_src_url.py  0004_awcontent_content.py  0005_alter_awstatitem_options_awstatitem_position.py  0006_alter_awstatitem_icon.py  0007_alter_awfeature3_columns.py  0008_awcontent_content_type_awcontent_object_id.py  0009_refactor_image.py  0010_awcontentaction_awctaaction_awheroaction_and_more.py  0011_alter_awbrandimage_options_and_more.py  0012_remove_awcontentaction_content_type_and_more.py  0013_alter_awcontentaction_href_alter_awctaaction_href_and_more.py  0014_awfooterlink_title.py  0015_alter_awfooter_links_alter_awfooter_secondary_links_and_more.py  0016_alter_awfooterlinkitem_options_remove_awfooter_links_and_more.py  0017_awfootersociallinksthrough_and_more.py  0018_alter_awfooterlinksthrough_managers_and_more.py  0019_rename_foot_name_awfooter_foot_note.py  0020_awheader_awheaderaction_awheaderlink_and_more.py  0021_alter_awheaderactionthrough_managers_and_more.py  0022_alter_awfooterlinkitem_footer_links.py  0023_awbrandimage_src_url_awcontentimage_src_url_and_more.py  0024_remove_awheroimage_hero_awhero_image.py  0025_remove_awcontentaction_content_and_more.py  0026_alter_awcontentaction_variant_and_more.py  0027_remove_awpriceitem_pricing_awpriceitemthrough_and_more.py  0028_awcontact_submit_url.py  0029_remove_awcontact_inputs_and_more.py  0031_awdisclaimer.py  (+12 more)
headless_cms/contrib/astrowind/shared/: serializers.py
headless_cms/core/management/commands/: clean_outdated_drafts.py  export_cms_data.py  import_cms_data.py
headless_cms/enhances/static/localized_fields/: localized-fields-admin.js
headless_cms/enhances/templates/admin/: change_form.html
headless_cms/enhances/templates/reversion/: object_history.html  revision_form.html
headless_cms/fields/: __init__.py  boolean_field.py  martor_field.py  slug_field.py  url_field.py
headless_cms/schema/: auto_schema.py  preprocessing_hooks.py  urls.py  views.py
headless_cms/utils/: custom_import_export.py  hash_utils.py  markdown.py  martor_custom_upload.py  relations.py
scripts/: lint.sh
tests/: pytest.ini  test_serializers.py
tests/helpers/: base.py
tests/test_app/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
tests/test_app/migrations/: 0001_initial.py  0002_article_skip_translation_and_more.py  0002_comment_admin_sortable.py  0003_alter_articleimage_src_url.py
tests/test_app/tests/: test_admin.py  test_models.py  test_views.py
tests/test_commands/: test_clean_outdated_drafts.py  test_import_export_cms_data.py
tests/test_commands/data/: invalid_data.txt
tests/test_project/: settings.py  urls.py
tests/test_schema/: test_cms_api_schema.yml  test_cms_schema.py
tests/test_translation/: test_base_translation.py  test_openai_translation.py
tests/test_utils/: base.py  schema_utils.py  test_relations.py
(+22 files in other folders)
